# RustCrypto-traits

./: Cargo.toml
crypto-common/src/: lib.rs
digest/src/: lib.rs  mac_xof.rs
digest/src/core_api/: wrapper.rs
