[workspace]
resolver = "2"
members = [
    "aead",
    "cipher",
    "crypto-common",
    "digest",
    "kem",
    "password-hash",
    "signature",
    "signature/async",
    "universal-hash",
]
# re-add when all crates are MSRV 1.60+
exclude = [
    "crypto",
    "elliptic-curve"
]

[patch.crates-io.crypto-common]
git = "https://github.com/ok-ryoko/RustCrypto-traits"
branch = "crypto-common-keycustominit"
